syntax = "proto3";

option go_package = "github.com/omaqase/sato/product/pkg/api/v1/category;protobuf";
package api.v1.category;

import "category_messages.proto";
import "google/api/annotations.proto";

// CategoryService provides CRUD operations to manage categories.
service CategoryService {
  // Creating a new category.
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {
    option (google.api.http) = {
      post: "/admin/api/v1/categories"
      body: "*"
    };
  }

  // Get category by ID.
  rpc GetCategoryById(GetCategoryByIdRequest) returns (GetCategoryByIdResponse) {
    option (google.api.http) = {
      get: "/api/v1/categories/{id}"
    };
  }

  // Updating an existing category.
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse) {
    option (google.api.http) = {
      patch: "/admin/api/v1/categories/{id}"
      body: "*"
    };
  }

  // Delete a category by ID or slug.
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse) {
    option (google.api.http) = {
      delete: "/admin/api/v1/categories/{id}"
    };
  }

  // Get a list of all categories.
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {
    option (google.api.http) = {
      get: "/api/v1/categories"
    };
  }
}